--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express-handlebars": "^3.0.0",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.28.6"
   },
   "devDependencies": {},
   "scripts": {
